--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="header">
+      <div class="logo">
+          <img src="/Images/Rocky.png" alt="Logo of Rocky the dog">
+      </div>
+      <div class="nav">
+        <div class="nav-link"><a href="#"> header link one</a></div>
+        <div class="nav-link"><a href="#"> header link two</a></div>
+        <div class="nav-link"><a href="#"> header link three</a></div>
+      </div>
+    </div>
+  </body>
 </html>
