--- a/index.html
+++ b/index.html
@@ -8,14 +8,50 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="header">
-      <div class="logo">
-          <img src="/Images/Rocky.png" alt="Logo of Rocky the dog">
+    <div class="hero-container">
+      <div class="header">
+        <div class="logo">Header Logo</div>
+        <div class="nav">
+          <div class="nav-link"><a href="#"> header link one</a></div>
+          <div class="nav-link"><a href="#"> header link two</a></div>
+          <div class="nav-link"><a href="#"> header link three</a></div>
+        </div>
       </div>
-      <div class="nav">
-        <div class="nav-link"><a href="#"> header link one</a></div>
-        <div class="nav-link"><a href="#"> header link two</a></div>
-        <div class="nav-link"><a href="#"> header link three</a></div>
+      <div class="hero">
+        <div class="left">
+          <div class="title">This website is awesome</div>
+          <div class="description">
+            This website has some subtext that goes here under the main title.
+            It's a smaller font and the color is lower contrast.
+          </div>
+          <div class="button">
+            <button>Sign Up</button>
+          </div>
+        </div>
+        <div class="right">
+          <div class="image">Placeholder Image</div>
+        </div>
+      </div>
+    </div>
+    <div class="info">
+      <div class="info-title">Some random information</div>
+      <div class="cards">
+        <div class="card">
+          <div class="card-square"></div>
+          <div class="card-text">this is some text</div>
+        </div>
+        <div class="card">
+          <div class="card-square"></div>
+          <div class="card-text">this is some text</div>
+        </div>
+        <div class="card">
+          <div class="card-square"></div>
+          <div class="card-text">this is some text</div>
+        </div>
+        <div class="card">
+          <div class="card-square"></div>
+          <div class="card-text">this is some text</div>
+        </div>
       </div>
     </div>
   </body>
