--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             It's a smaller font and the color is lower contrast.
           </div>
           <div class="button">
-            <button>Sign Up</button>
+            <button>Sign up</button>
           </div>
         </div>
         <div class="right">
