--- a/index.html
+++ b/index.html
@@ -64,5 +64,17 @@
         <div class="quote-sayer">- Thor, God of Thunder</div>
       </div>
     </div>
+    <div class="cta-block">
+      <div class="cta-container">
+        <div class="cta-left">
+          <div class="cta-title">Call to action!</div>
+          <div class="cta-description">
+            Sign up for our product by clicking that button right over there!
+          </div>
+        </div>
+        <div class="cta-button">
+            <button>Sign up</div></button>
+      </div>
+    </div>
   </body>
 </html>
