--- a/index.html
+++ b/index.html
@@ -76,5 +76,8 @@
             <button>Sign up</div></button>
       </div>
     </div>
+    <footer>
+        Copyright Ⓒ The Odin Project 2021
+    </footer>
   </body>
 </html>
